# ChangeLog for x11-wm/fvwm
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-wm/fvwm/ChangeLog,v 1.47 2003/11/27 16:28:17 taviso Exp $

*fvwm-2.5.8-r2 (27 Nov 2003)

  27 Nov 2003; Tavis Ormandy <taviso@gentoo.org> fvwm-2.5.8-r1.ebuild,
  fvwm-2.5.8-r2.ebuild, fvwm-2.5.8.ebuild:
  new FvwmTabs released, version bump.
  removing some stale ebuilds.

*fvwm-2.5.8-r1 (13 Nov 2003)

  13 Nov 2003; Tavis Ormandy <taviso@gentoo.org> fvwm-2.5.8-r1.ebuild,
  files/mini.happy.xpm:
  new release of FvwmTabs, including a default dnd icon.
  version bump.

  11 Nov 2003; Tavis Ormandy <taviso@gentoo.org> fvwm-2.5.8.ebuild:
  --enable-multibyte is no longer optional, removed cjk from IUSE.

  11 Nov 2003; Tavis Ormandy <taviso@gentoo.org> fvwm-2.5.8.ebuild,
  files/fvwmtabs-insecure-tmp-handling.diff:
  make fvwmtabs save state files to home directory, rather than /tmp.
  see ebuild comments.

  07 Nov 2003; Tavis Ormandy <taviso@gentoo.org> fvwm-2.5.8.ebuild:
  append-flags -fPIC on alpha.

  03 Nov 2003; Tavis Ormandy <taviso@gentoo.org> fvwm-2.5.8.ebuild:
  set FVWM_BUGADDR.

  03 Nov 2003; Tavis Ormandy <taviso@gentoo.org> fvwm-2.5.8.ebuild:
  gnome libraries are not much use without FvwmGtk.

  02 Nov 2003; Tavis Ormandy <taviso@gentoo.org> fvwm-2.5.8.ebuild:
  inherit eutils, gnuconfig no longer required.

*fvwm-2.5.8 (01 Nov 2003)

  01 Nov 2003; Tavis Ormandy <taviso@gentoo.org> fvwm-2.5.8.ebuild,
  files/disable-debug-statements.diff, files/fvwm-translucent-menus.diff.gz:
  new fvwm development release 2.5.8, and new FvwmTabs 2.4.
  i've included two patches, one enables fast translucent menus, the other
  disables some noisy debug statements.

  31 Oct 2003; Tavis Ormandy <taviso@gentoo.org> fvwm-2.5.7-r5.ebuild:
  stable.

*fvwm-2.5.7-r5 (20 Oct 2003)

  20 Oct 2003; Tavis Ormandy <taviso@gentoo.org> fvwm-2.5.7-r5.ebuild:
  new release of FvwmTabs, with some new configuration options.
