@@ -1,8 +1,8 @@
 MD5 e79bd2fa2e46e650aabaa16754e25583 fvwm-2.5.7-r5.ebuild 8757
 MD5 b893f78193652b275ce5d276ac38af29 fvwm-2.4.17.ebuild 3961
-MD5 8f195cb9d937ee113ebb6e4a453171ca ChangeLog 9506
+MD5 90da0216de371ab937c87b5aea3d982a ChangeLog 9614
 MD5 4833e4d0685ef48988c0c5c4f9c6b377 metadata.xml 527
-MD5 04f205d4ad9e39c0e0488c71f70674e3 fvwm-2.5.8-r2.ebuild 9587
+MD5 8321c9e2742d4b9fc66892f028cb78b6 fvwm-2.5.8-r2.ebuild 9939
 MD5 e2ceb5d855c5406a09d82442196efad8 files/README.transluceny.gz 5788
 MD5 e5701841190ad529d5577c8da69d5006 files/fvwmtabs-insecure-tmp-handling.diff 2350
 MD5 b2af3c1c8fe4f142e2b8debbb5c59a94 files/digest-fvwm-2.4.17 65
