@@ -1,6 +1,9 @@
 # ChangeLog for x11-wm/fvwm
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/fvwm/ChangeLog,v 1.47 2003/11/27 16:28:17 taviso Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/fvwm/ChangeLog,v 1.48 2003/11/28 18:52:59 taviso Exp $
+
+  28 Nov 2003; Tavis Ormandy <taviso@gentoo.org> fvwm-2.5.8-r2.ebuild:
+  optionally compile fvwm with icc.
 
 *fvwm-2.5.8-r2 (27 Nov 2003)
 
